--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <p>This calculator works just like a normal calculator. Click any number to start calculating.</p>
+    <p>Simple Calculator</p>
     <div class="calculator">
       <div class="calculator-display">0</div>
       <div class="calculator-keys">
